--- a/README
+++ b/README
@@ -1,4 +1,1 @@
-Data Science Assignments
-===========================
-
-Just a place to store my work.
+Random code, where else you gonna store these things.
